--- a/LivrariaDDD/LivrariaDDD.Service/LivrariaDDD.Service.csproj
+++ b/LivrariaDDD/LivrariaDDD.Service/LivrariaDDD.Service.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <ProjectReference Include="..\LivrariaDDD.Domain\LivrariaDDD.Domain.csproj" />
     <ProjectReference Include="..\LivrariaDDD.Repository\LivrariaDDD.Repository.csproj" />
